Adicionado setTransactionSucessful() para commitar inserts no banco. Corrigida coluna id para "_id", movido modelo para pacote próprio. Criado Logger. Criado Profiler.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <provider
+            android:name="org.github.wpiasecki.graviola.db.HorarioOnibusContentProvider"
+            android:authorities="org.github.wpiasecki.graviola.db.HorarioOnibusContentProvider"
+            android:exported="false" />
+         
+        <service android:name=".OnibusService" />
     </application>
 
 </manifest>
